force-app/main/default/objects/Product2/fields/Capacity_For_No_of_Plate_wash_up_to_12__c.field-meta.xml
<CustomField>
    <fullName>Capacity_For_No_of_Plate_wash_up_to_12__c</fullName>
    <formula>No_of_Plate_wash_up_to_12__c  *  Capacity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capacity For No of Plate wash up to 12</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>