force-app/main/default/objects/Product2/fields/Capacity_Max__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Max__c</fullName>
    <label>Capacity (Max)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>