force-app/main/default/objects/Product2/fields/Capicity_For_No_of_Plate_wash_up_to_18__c.field-meta.xml
<CustomField>
    <fullName>Capicity_For_No_of_Plate_wash_up_to_18__c</fullName>
    <formula>No_Of_Plate_Wash_Up_To_18__c  *  Capacity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capicity For No of Plate wash up to 18</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>