force-app/main/default/objects/Product2/fields/child_family__c.field-meta.xml
<CustomField>
    <fullName>child_family__c</fullName>
    <label>child family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Child Family</fullName>
            </value>
            <value>
                <fullName>Industrial Glasswasher</fullName>
            </value>
            <value>
                <fullName>Industrial Dishwasher</fullName>
            </value>
            <value>
                <fullName>Hood Type</fullName>
            </value>
            <value>
                <fullName>Rack Conveyor</fullName>
            </value>
            <value>
                <fullName>Utensil And Pot Washer</fullName>
            </value>
            <value>
                <fullName>Electric Drying Module</fullName>
            </value>
            <value>
                <fullName>Conventional Washer Extractor</fullName>
            </value>
            <value>
                <fullName>Xeros Washer Extractor</fullName>
            </value>
            <value>
                <fullName>Hygienic Barrier Washer Extractor</fullName>
            </value>
            <value>
                <fullName>Vertical Washing Machine</fullName>
            </value>
            <value>
                <fullName>Shoe Washing Machine</fullName>
            </value>
            <value>
                <fullName>Direct Drive Series</fullName>
            </value>
            <value>
                <fullName>Non-Coaxial Series</fullName>
            </value>
            <value>
                <fullName>MS Body</fullName>
            </value>
            <value>
                <fullName>SS Body and Basket</fullName>
            </value>
            <value>
                <fullName>Roll Heated Flat Work Ironer</fullName>
            </value>
            <value>
                <fullName>Movable Chest - E Series</fullName>
            </value>
            <value>
                <fullName>Fixed Chest - D Series</fullName>
            </value>
            <value>
                <fullName>Automatic Sheet Folder (Only applicable for Chest Heated Flat Work Ironer)</fullName>
            </value>
            <value>
                <fullName>Dry Cleaning Machines (Discount only 10%)</fullName>
            </value>
            <value>
                <fullName>Body Presses</fullName>
            </value>
            <value>
                <fullName>Ironing Tables</fullName>
            </value>
            <value>
                <fullName>Presses</fullName>
            </value>
            <value>
                <fullName>Buck Attachment</fullName>
            </value>
            <value>
                <fullName>Stain Removing Machines</fullName>
            </value>
            <value>
                <fullName>Electric Steam Generators</fullName>
            </value>
            <value>
                <fullName>Diesel Steam Generators</fullName>
            </value>
            <value>
                <fullName>Gas Steam Generators</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>