force-app/main/default/objects/Product2/fields/Dry_load_capacity__c.field-meta.xml
<CustomField>
    <fullName>Dry_load_capacity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Dry load capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>