force-app/main/default/objects/Product2/fields/Each_Machine_Consumption_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Each_Machine_Consumption_Cycle__c</fullName>
    <formula>Total_Connected_Power__c * (Power_Consumption__c)</formula>
    <inlineHelpText>Power Consumption *  Total Connected Power</inlineHelpText>
    <label>Each Machine Consumption/Cycle</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>