force-app/main/default/objects/Product2/fields/Electric_Connection_ISV__c.field-meta.xml
<CustomField>
    <fullName>Electric_Connection_ISV__c</fullName>
    <label>Electric Connection(ISV)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1P/230/50/N</fullName>
            </value>
            <value>
                <fullName>3P/400/50/N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>