force-app/main/default/objects/Product2/fields/Exit_Side__c.field-meta.xml
<CustomField>
    <fullName>Exit_Side__c</fullName>
    <label>Exit Side</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exit Left</fullName>
            </value>
            <value>
                <fullName>Exit Right</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>