force-app/main/default/objects/Product2/fields/Gas_Each_Machine_Consumption_in_Kg_Hr__c.field-meta.xml
<CustomField>
    <fullName>Gas_Each_Machine_Consumption_in_Kg_Hr__c</fullName>
    <label>Gas Each Machine Consumption in Kg/ Hr</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>