force-app/main/default/objects/Product2/fields/Heater_Connected_Power_In_kW__c.field-meta.xml
<CustomField>
    <fullName>Heater_Connected_Power_In_kW__c</fullName>
    <label>Heater Connected Power In kW</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>