force-app/main/default/objects/Product2/fields/Heating_type__c.field-meta.xml
<CustomField>
    <fullName>Heating_type__c</fullName>
    <label>Heating type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Diesel</fullName>
            </value>
            <value>
                <fullName>Dual (Electric &amp; Steam)</fullName>
            </value>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Steam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>