force-app/main/default/objects/Product2/fields/Machine_Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Machine_Dimensions__c</fullName>
    <label>Machine Dimensions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>40 x 50 x 59.5</fullName>
            </value>
            <value>
                <fullName>43.5 x 54 x 67</fullName>
            </value>
            <value>
                <fullName>57.5 x 100.5 x 82</fullName>
            </value>
            <value>
                <fullName>64 x 74 x 194</fullName>
            </value>
            <value>
                <fullName>78.8 X 83.5 X 208</fullName>
            </value>
            <value>
                <fullName>205 x 77 x 208.8</fullName>
            </value>
            <value>
                <fullName>145 x 77 x 208.8</fullName>
            </value>
            <value>
                <fullName>257 x 77 x 208.8</fullName>
            </value>
            <value>
                <fullName>197 x 77 x 208.8</fullName>
            </value>
            <value>
                <fullName>230.1 x 77 x208.8</fullName>
            </value>
            <value>
                <fullName>170.1 x 77 x 208.8</fullName>
            </value>
            <value>
                <fullName>175 x 77 x 208.8</fullName>
            </value>
            <value>
                <fullName>115 x77 x 208.8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>