force-app/main/default/objects/Product2/fields/Material_Code__c.field-meta.xml
<CustomField>
    <fullName>Material_Code__c</fullName>
    <label>Material Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>