force-app/main/default/objects/Product2/fields/Material_Group__c.field-meta.xml
<CustomField>
    <fullName>Material_Group__c</fullName>
    <label>Material Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>EL</fullName>
            </value>
            <value>
                <fullName>ILB</fullName>
            </value>
            <value>
                <fullName>ILBP</fullName>
            </value>
            <value>
                <fullName>ILDC</fullName>
            </value>
            <value>
                <fullName>ILF</fullName>
            </value>
            <value>
                <fullName>ILH</fullName>
            </value>
            <value>
                <fullName>ILM</fullName>
            </value>
            <value>
                <fullName>ILO</fullName>
            </value>
            <value>
                <fullName>ILTD</fullName>
            </value>
            <value>
                <fullName>ILV</fullName>
            </value>
            <value>
                <fullName>ILW</fullName>
            </value>
            <value>
                <fullName>ILWH</fullName>
            </value>
            <value>
                <fullName>INDWACC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>