force-app/main/default/objects/Product2/fields/Max_Height_Of_Washable_Plate__c.field-meta.xml
<CustomField>
    <fullName>Max_Height_Of_Washable_Plate__c</fullName>
    <label>Max Height Of Washable Plate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>