force-app/main/default/objects/Product2/fields/Motor_Connected_Power_in_kW__c.field-meta.xml
<CustomField>
    <fullName>Motor_Connected_Power_in_kW__c</fullName>
    <label>Motor Connected Power in kW</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>