force-app/main/default/objects/Product2/fields/No_of_Plate_wash_up_to_12__c.field-meta.xml
<CustomField>
    <fullName>No_of_Plate_wash_up_to_12__c</fullName>
    <label>No of Plate wash up to 12</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>