force-app/main/default/objects/Product2/fields/No_Of_Plate_Wash_Up_To_18__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Plate_Wash_Up_To_18__c</fullName>
    <label>No Of Plate Wash Up To 18(Pocket type)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>