force-app/main/default/objects/Product2/fields/Power_Consumption__c.field-meta.xml
<CustomField>
    <fullName>Power_Consumption__c</fullName>
    <label>Power Consumption</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>