force-app/main/default/objects/Product2/fields/Rack_size__c.field-meta.xml
<CustomField>
    <fullName>Rack_size__c</fullName>
    <label>Rack size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>35 x 35</fullName>
            </value>
            <value>
                <fullName>40 x 40</fullName>
            </value>
            <value>
                <fullName>50 x 50</fullName>
            </value>
            <value>
                <fullName>50 x 60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>