force-app/main/default/objects/Product2/fields/Required_Elecectric_power__c.field-meta.xml
<CustomField>
    <fullName>Required_Elecectric_power__c</fullName>
    <label>Required Elecectric power</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>