force-app/main/default/objects/Product2/fields/Shelf_Life_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Shelf_Life_in_Days__c</fullName>
    <label>Shelf Life in Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>