force-app/main/default/objects/Product2/fields/Total_Connected_Power__c.field-meta.xml
<CustomField>
    <fullName>Total_Connected_Power__c</fullName>
    <formula>Heater_Connected_Power_In_kW__c +  Motor_Connected_Power_in_kW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Connected Power</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>