force-app/main/default/objects/Product2/fields/Wash_Load_capacity__c.field-meta.xml
<CustomField>
    <fullName>Wash_Load_capacity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Wash Load capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>