force-app/main/default/objects/Product2/fields/Water_Consumption_In_Liters__c.field-meta.xml
<CustomField>
    <fullName>Water_Consumption_In_Liters__c</fullName>
    <label>Water Consumption In Liters</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>