force-app/main/default/objects/Product2/fields/Water_Required_Ltrs_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Water_Required_Ltrs_Cycle__c</fullName>
    <formula>Capacity__c * Water_Consumption_In_Liters__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Water Required  Ltrs/ Cycle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>