force-app/main/default/objects/Product2/recordTypes/IDW_Essentials.recordType-meta.xml
<RecordType>
    <fullName>IDW_Essentials</fullName>
    <active>true</active>
    <label>IDW Essentials</label>
</RecordType>