force-app/main/default/objects/Product2/recordTypes/ILM_Essentials.recordType-meta.xml
<RecordType>
    <fullName>ILM_Essentials</fullName>
    <active>true</active>
    <label>ILM Essentials</label>
</RecordType>