force-app/main/default/objects/Product2/recordTypes/Industrial_Dishwasher.recordType-meta.xml
<RecordType>
    <fullName>Industrial_Dishwasher</fullName>
    <active>true</active>
    <label>Industrial Dishwasher</label>
</RecordType>