force-app/main/default/objects/Product2/recordTypes/Industrial_Washing_Machine.recordType-meta.xml
<RecordType>
    <fullName>Industrial_Washing_Machine</fullName>
    <active>true</active>
    <label>Industrial Washing Machine</label>
</RecordType>