force-app/main/default/objects/Product2/recordTypes/Special_Feature.recordType-meta.xml
<RecordType>
    <fullName>Special_Feature</fullName>
    <active>true</active>
    <label>Special Feature</label>
</RecordType>